# rag-doc-chat

./: .env.example  .gitignore  ARCHITECTURE.md  PROJECT_PLAN.md  RAG_HARDENING_GUIDE.md  README.md  RETRIEVAL_SCORE_GUIDE.md  TECHNICAL_REVIEW.md  app.py  main.py  pyproject.toml
ingestion/: __init__.py  ingest.py  loaders.py  summary.py
query/: __init__.py  answer.py
src/: config.py  logger.py
