[project]
name = "rag-doc-chat"
version = "0.1.0"
description = "A RAG demo where the user uploads files, gets a summary, and asks questions about them"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv>=1.0.0",
    "langchain==1.2.10",
    "langchain-chroma==1.1.0",
    "pypdf==4.0.0",
    "langchain-text-splitters==1.1.1",
    "langchain-huggingface==1.2.0",
    "langchain-openai==1.1.10",
    "gradio==6.6.0",
    "langchain-community==0.4.0",
]
